[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
lazy_static = "1.4.0"
# bevy = { version = "0.7.0", features = ["dynamic"] }
bevy = "0.7.0"

[workspace]
resolver = "2"